mikec/tests/PASS/varchain/2.mc
void main(){
    int a,b;
    return;
}
