mikec/tests/FAIL/arithmetic/3.mc
/* Divide chars */
void main()
{
	char a = 'a';
	char b = 'b';
	int c = a*b;
}